# gui_projects

./: .gitignore  Cargo.toml  README.md
apps/calc_app/: Cargo.toml  README.md
apps/calc_app/src/: main.rs
apps/note_app/: Cargo.toml  README.md
apps/note_app/src/: main.rs
